# e2egpu-kc

./: CMakeLists.txt  Makefile  README.md  build  build.sh  main.py  setup.py
e2epy/: CMakeLists.txt  counter.py  main.py
e2epy.egg-info/: SOURCES.txt  top_level.txt
e2epy/backend/: bindings.cpp  hashtable.cu  hashtable.h  io.cpp  io.h  kernels.cu  kernels.h
e2epy/e2epy/: counter.py
e2epy/e2epy.egg-info/: PKG-INFO  SOURCES.txt
e2epy/e2epy/backend/: bindings.cpp  common.h  hashtable.cu  io.cpp  io.h  kernels.h
src/: common.h  hashtable.cu  hashtable.h  io.h  kernels.cu  kernels.h  main.cpp  r2kmer.cpp  r2kmer.h
